data/derived/fa15/progs/unify/prog3240.ml.out
Characters 149-150:
  let seen' = if List.mem seen h then seen else seen @ [h] in
                                                        ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
